--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
     ></script>
 
     <!-- CUSTOM JS SCRIPT  -->
-    <script src="portfolio.js"></script>
+    <script src="js/portfolio.js"></script>
   </body>
 </html>
