--- a/index.html
+++ b/index.html
@@ -14,18 +14,19 @@
     />
 
     <!-- BOOTSTRAP CDN  -->
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
-    />
+    /> -->
 
     <!-- CUSTOM CSS  -->
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <!-- BOOTSTRAP JS CDN  -->
-    <script
+    <!-- <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
       crossorigin="anonymous"
@@ -39,7 +40,7 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
       integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
 
     <!-- CUSTOM JS SCRIPT  -->
     <script src="js/portfolio.js"></script>
