completed the logo and navbar

--- a/index.html
+++ b/index.html
@@ -25,6 +25,44 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
+    <!-- =====================================================
+    Header area starts here
+===================================================== -->
+    <header class="header-area">
+      <div class="container">
+        <div class="nav-area">
+          <div class="logo">
+            <a href="index.html" class="logo-text">
+              nayeem<span class="logo-text-mod">.</span>
+            </a>
+          </div>
+          <nav class="nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="" class="nav__item-link">Home</a>
+              </li>
+              <li class="nav__item">
+                <a href="" class="nav__item-link">Skill</a>
+              </li>
+              <li class="nav__item">
+                <a href="" class="nav__item-link">Portfolio</a>
+              </li>
+              <li class="nav__item">
+                <a href="" class="nav__item-link">About Me</a>
+              </li>
+              <li class="nav__item">
+                <a href="" class="nav__item-link">Contact</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+    <!-- 
+=====================================================
+    Header area ends here
+===================================================== -->
+
     <!-- BOOTSTRAP JS CDN  -->
 
     <!-- <script
