working on the header section

--- a/index.html
+++ b/index.html
@@ -53,8 +53,29 @@
               <li class="nav__item">
                 <a href="" class="nav__item-link">Contact</a>
               </li>
+              <li class="nav__item">
+                <a href="" class="nav__item-link">Blog</a>
+              </li>
+              <a href="#" class="btn btn-link btn-resume">Get Resume</a>
             </ul>
           </nav>
+        </div>
+      </div>
+      <div class="container">
+        <div class="hero-section">
+          <div class="intro">
+            <p class="intro__greet">Hello, This is-</p>
+            <h1 class="heading heading-primary">
+              Nayeem M<span class="heading-primary-mod">.</span>
+            </h1>
+            <ul class="intro__list">
+              <li class="intro__list-item">Full Stack Web Developer</li>
+              <!-- <li class="intro__list-item"></li> -->
+            </ul>
+          </div>
+          <div class="hero-img">
+            <img src="./img/hero.png" alt="hero image" class="img img-hero" />
+          </div>
         </div>
       </div>
     </header>
