completed the header section

--- a/index.html
+++ b/index.html
@@ -65,17 +65,26 @@
         <div class="hero-section">
           <div class="intro">
             <p class="intro__greet">Hello, This is-</p>
-            <h1 class="heading heading-primary">
-              Nayeem M<span class="heading-primary-mod">.</span>
+            <h1 class="heading heading-primary heading-primary-mod">
+              Nayeem M<span class="heading-primary-inner-mod">.</span>
             </h1>
             <ul class="intro__list">
               <li class="intro__list-item">Full Stack Web Developer</li>
               <!-- <li class="intro__list-item"></li> -->
             </ul>
+            <a href="#" class="btn btn-link btn-viewWorks"
+              >View Works <span><i class="fas fa-arrow-right"></i></span
+            ></a>
           </div>
           <div class="hero-img">
-            <img src="./img/hero.png" alt="hero image" class="img img-hero" />
+            <img src="./img/hero-1.png" alt="hero image" class="img img-hero" />
           </div>
+        </div>
+
+        <div class="arrow">
+          <a href="" class="arrow-down">
+            <i class="fas fa-arrow-down"></i>
+          </a>
         </div>
       </div>
     </header>
