working on the burger menu

--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
                 <a href="" class="nav__item-link">Blog</a>
               </li>
               <a href="#" class="btn btn-link btn-resume">Get Resume</a>
+              <div class="burger-menu">
+                <span class="bar bar1"></span>
+                <span class="bar bar2"></span>
+                <span class="bar bar3"></span>
+              </div>
             </ul>
           </nav>
         </div>
