working on the portfolio site

--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
                 <a href="" class="nav__item-link">Blog</a>
               </li>
               <a href="#" class="btn btn-link btn-resume">Get Resume</a>
-              <div class="burger-menu">
-                <span class="bar bar1"></span>
-                <span class="bar bar2"></span>
-                <span class="bar bar3"></span>
-              </div>
             </ul>
           </nav>
+        </div>
+        <div class="burger-menu">
+          <div class="bar bar1"></div>
+          <div class="bar bar2"></div>
+          <div class="bar bar3"></div>
         </div>
       </div>
       <div class="container">
@@ -91,6 +91,23 @@
             <i class="fas fa-arrow-down"></i>
           </a>
         </div>
+
+        <aside class="sidemenu">
+          <div class="sidemenu__close-btn">
+            <a href="#home" class="sidemenu__logo">nayeem</a>
+            <i class="fas fa-times"></i>
+          </div>
+          <ul class="sidemenu__list">
+            <li class="sidemenu__item">
+              <i class="fas fa-home"></i
+              ><a href="#" class="sidemenu__link">Home</a>
+            </li>
+            <li class="sidemenu__item">
+              <i class="fas fa-tools"></i
+              ><a href="#" class="sidemenu__link">Skill</a>
+            </li>
+          </ul>
+        </aside>
       </div>
     </header>
     <!-- 
