--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </ul>
           </nav>
         </div>
-        <div class="burger-menu">
+        <div class="burger-menu" id="burger-menu">
           <div class="bar bar1"></div>
           <div class="bar bar2"></div>
           <div class="bar bar3"></div>
@@ -95,7 +95,7 @@
         <aside class="sidemenu">
           <div class="sidemenu__close-btn">
             <a href="#home" class="sidemenu__logo">nayeem</a>
-            <i class="fas fa-times"></i>
+            <i class="fas fa-times" id="sidebarCloseBtn"></i>
           </div>
           <ul class="sidemenu__list">
             <li class="sidemenu__item">
@@ -105,6 +105,22 @@
             <li class="sidemenu__item">
               <i class="fas fa-tools"></i
               ><a href="#" class="sidemenu__link">Skill</a>
+            </li>
+            <li class="sidemenu__item">
+              <i class="fas fa-tools"></i
+              ><a href="#" class="sidemenu__link">About Me</a>
+            </li>
+            <li class="sidemenu__item">
+              <i class="fas fa-tools"></i
+              ><a href="#" class="sidemenu__link">Portfolio</a>
+            </li>
+            <li class="sidemenu__item">
+              <i class="fas fa-tools"></i
+              ><a href="#" class="sidemenu__link">Contact</a>
+            </li>
+            <li class="sidemenu__item">
+              <i class="fas fa-tools"></i
+              ><a href="#" class="sidemenu__link">Blog</a>
             </li>
           </ul>
         </aside>
