--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
               <li class="nav__item">
                 <a href="" class="nav__item-link">Home</a>
               </li>
-              <li class="nav__item">
+              <!-- <li class="nav__item">
                 <a href="" class="nav__item-link">Skill</a>
-              </li>
+              </li> -->
               <li class="nav__item">
                 <a href="" class="nav__item-link">Portfolio</a>
               </li>
               <li class="nav__item">
-                <a href="" class="nav__item-link">About Me</a>
+                <a href="" class="nav__item-link">About</a>
               </li>
               <li class="nav__item">
                 <a href="" class="nav__item-link">Contact</a>
@@ -107,19 +107,19 @@
               ><a href="#" class="sidemenu__link">Skill</a>
             </li>
             <li class="sidemenu__item">
-              <i class="fas fa-tools"></i
+              <i class="fas fa-user"></i
               ><a href="#" class="sidemenu__link">About Me</a>
             </li>
             <li class="sidemenu__item">
-              <i class="fas fa-tools"></i
+              <i class="fas fa-briefcase"></i
               ><a href="#" class="sidemenu__link">Portfolio</a>
             </li>
             <li class="sidemenu__item">
-              <i class="fas fa-tools"></i
+              <i class="fas fa-id-card-alt"></i
               ><a href="#" class="sidemenu__link">Contact</a>
             </li>
             <li class="sidemenu__item">
-              <i class="fas fa-tools"></i
+              <i class="fab fa-blogger-b"></i
               ><a href="#" class="sidemenu__link">Blog</a>
             </li>
           </ul>
@@ -129,6 +129,52 @@
     <!-- 
 =====================================================
     Header area ends here
+===================================================== -->
+
+    <!-- 
+=====================================================
+    About area starts here
+===================================================== -->
+
+    <section class="section-about">
+      <div class="container">
+        <div class="about">
+          <div class="about__info">
+            <div class="btn-group">
+              <button
+                onclick="activeTab(0)"
+                class="btn-about btn-aboutme btn-active-about"
+              >
+                About
+              </button>
+              <button onclick="activeTab(1)" class="btn-about btn-skill">
+                Skill
+              </button>
+              <button onclick="activeTab(2)" class="btn-about btn-experience">
+                Experience
+              </button>
+            </div>
+            <!-- tab info  -->
+            <div class="aboutme__info btn-about-info">
+              <h1>about me</h1>
+            </div>
+            <div class="skill__info btn-about-info">
+              <h1>skill</h1>
+            </div>
+            <div class="experience__info btn-about-info">
+              <h1>experience</h1>
+            </div>
+          </div>
+          <div class="about__img">
+            <img src="./img/nayeem.jpeg" alt="" class="about__img-mod" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- 
+=====================================================
+    About area ends here
 ===================================================== -->
 
     <!-- BOOTSTRAP JS CDN  -->
