completed the services section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     /> -->
-
+    <link rel="stylesheet" href="./css/owl.carousel.min.css" />
     <!-- CUSTOM CSS  -->
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
@@ -156,13 +156,47 @@
             </div>
             <!-- tab info  -->
             <div class="aboutme__info btn-about-info">
-              <h1>about me</h1>
+              <div class="aboutme">
+                <h1 class="heading__aboutme">
+                  Nayeem
+                  <span class="heading-primary-inner-mod">M.</span> Muzahid
+                </h1>
+                <p class="aboutme__intro">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Animi, quae quia tempore cumque, laudantium eius itaque
+                  sapiente, quibusdam ipsam voluptates fugiat cum cupiditate!
+                  Ipsum amet optio magni in sapiente consequuntur.
+                </p>
+              </div>
             </div>
             <div class="skill__info btn-about-info">
-              <h1>skill</h1>
+              <div class="aboutme">
+                <h1 class="heading__aboutme">Skills:</h1>
+
+                <div class="skills">
+                  <span class="badge">HTML5</span>
+                  <span class="badge">CSS3</span>
+                  <span class="badge">JavaScript</span>
+                  <span class="badge">React</span>
+                  <span class="badge">PHP</span>
+                  <span class="badge">Laravel</span>
+                  <span class="badge">WordPress</span>
+                  <span class="badge">MySQL</span>
+                </div>
+              </div>
             </div>
             <div class="experience__info btn-about-info">
-              <h1>experience</h1>
+              <div class="aboutme">
+                <h1 class="heading__aboutme">Experience:</h1>
+
+                <div class="experience marginTop4">
+                  <h4 class="experience__post">
+                    UnderGrad. Teaching Assistant
+                  </h4>
+                  <h5 class="experience__org">North South University</h5>
+                  <p class="experience__duration">Sep. 2019 - July 2020</p>
+                </div>
+              </div>
             </div>
           </div>
           <div class="about__img">
@@ -175,6 +209,111 @@
     <!-- 
 =====================================================
     About area ends here
+===================================================== -->
+    <!-- 
+=====================================================
+    Service area starts here
+===================================================== -->
+
+    <section class="section-services">
+      <div class="container">
+        <div class="services">
+          <div class="services__header">
+            <h5 class="heading__service-small">Services</h5>
+            <h1 class="heading__services">
+              This is My Expertise, The Services I'll Provide My Clients
+            </h1>
+          </div>
+          <div class="owl-carousel service-carousel">
+            <div class="service-1">
+              <div class="service-icon">
+                <i class="far fa-file-code"></i>
+              </div>
+              <h3 class="heading-service-1">Web Design</h3>
+              <p class="service-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum
+                eum, ipsa facere consequuntur porro mollitia. Commodi non porro
+                architecto eaque.
+              </p>
+              <a href="#" class="service-link"
+                >Read More
+                <span class="service-link-icon"
+                  ><i class="fas fa-arrow-right"></i></span
+              ></a>
+            </div>
+            <div class="service-1">
+              <div class="service-icon">
+                <i class="far fa-file-code"></i>
+              </div>
+              <h3 class="heading-service-1">Web Design</h3>
+              <p class="service-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum
+                eum, ipsa facere consequuntur porro mollitia. Commodi non porro
+                architecto eaque.
+              </p>
+              <a href="#" class="service-link"
+                >Read More
+                <span class="service-link-icon"
+                  ><i class="fas fa-arrow-right"></i></span
+              ></a>
+            </div>
+            <div class="service-1">
+              <div class="service-icon">
+                <i class="far fa-file-code"></i>
+              </div>
+              <h3 class="heading-service-1">Web Design</h3>
+              <p class="service-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum
+                eum, ipsa facere consequuntur porro mollitia. Commodi non porro
+                architecto eaque.
+              </p>
+              <a href="#" class="service-link"
+                >Read More
+                <span class="service-link-icon"
+                  ><i class="fas fa-arrow-right"></i></span
+              ></a>
+            </div>
+            <div class="service-1">
+              <div class="service-icon">
+                <i class="far fa-file-code"></i>
+              </div>
+              <h3 class="heading-service-1">Web Design</h3>
+              <p class="service-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum
+                eum, ipsa facere consequuntur porro mollitia. Commodi non porro
+                architecto eaque.
+              </p>
+              <a href="#" class="service-link"
+                >Read More
+                <span class="service-link-icon"
+                  ><i class="fas fa-arrow-right"></i></span
+              ></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- 
+=====================================================
+    Service area ends here
+===================================================== -->
+    <!-- 
+=====================================================
+    Portfolio area starts here
+===================================================== -->
+
+    <section class="section-portfolio">
+      <div class="container">
+        <div class="services__header">
+          <h5 class="heading__service-small">Portfolio</h5>
+          <h1 class="heading__services">My Works</h1>
+        </div>
+      </div>
+    </section>
+    <!-- 
+=====================================================
+    Portfolio area ends here
 ===================================================== -->
 
     <!-- BOOTSTRAP JS CDN  -->
@@ -195,6 +334,15 @@
       crossorigin="anonymous"
     ></script> -->
 
+    <!-- jQuery  -->
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- owlcarousel  -->
+    <script src="./js/owl.carousel.min.js"></script>
     <!-- CUSTOM JS SCRIPT  -->
     <script src="js/portfolio.js"></script>
   </body>
