working on the portfolio section

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
               <div class="service-icon">
                 <i class="far fa-file-code"></i>
               </div>
-              <h3 class="heading-service-1">Web Design</h3>
+              <h3 class="heading-service-1">Web Development</h3>
               <p class="service-description">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum
                 eum, ipsa facere consequuntur porro mollitia. Commodi non porro
@@ -308,6 +308,86 @@
         <div class="services__header">
           <h5 class="heading__service-small">Portfolio</h5>
           <h1 class="heading__services">My Works</h1>
+        </div>
+
+        <div class="work">
+          <div class="work-1">
+            <img src="./img/w1.jpg" class="work-1-img" alt="work 1" />
+            <div class="work-1-info">
+              <div class="work-1-info-mod">
+                <h3 class="heading-work-1">eCommerce</h3>
+                <a href="#" class="btn btn-link btn-viewWorks"
+                  >View Work <span><i class="fas fa-arrow-right"></i></span
+                ></a>
+              </div>
+            </div>
+          </div>
+          <div class="work-1">
+            <img src="./img/w1.jpg" class="work-1-img" alt="work 1" />
+            <div class="work-1-info">
+              <div class="work-1-info-mod">
+                <h3 class="heading-work-1">eCommerce</h3>
+                <a href="#" class="btn btn-link btn-viewWorks"
+                  >View Work <span><i class="fas fa-arrow-right"></i></span
+                ></a>
+              </div>
+            </div>
+          </div>
+          <div class="work-1">
+            <img src="./img/w1.jpg" class="work-1-img" alt="work 1" />
+            <div class="work-1-info">
+              <div class="work-1-info-mod">
+                <h3 class="heading-work-1">eCommerce</h3>
+                <a href="#" class="btn btn-link btn-viewWorks"
+                  >View Work <span><i class="fas fa-arrow-right"></i></span
+                ></a>
+              </div>
+            </div>
+          </div>
+          <div class="work-1">
+            <img src="./img/w1.jpg" class="work-1-img" alt="work 1" />
+            <div class="work-1-info">
+              <div class="work-1-info-mod">
+                <h3 class="heading-work-1">eCommerce</h3>
+                <a href="#" class="btn btn-link btn-viewWorks"
+                  >View Work <span><i class="fas fa-arrow-right"></i></span
+                ></a>
+              </div>
+            </div>
+          </div>
+          <div class="work-1">
+            <img src="./img/w1.jpg" class="work-1-img" alt="work 1" />
+            <div class="work-1-info">
+              <div class="work-1-info-mod">
+                <h3 class="heading-work-1">eCommerce</h3>
+                <a href="#" class="btn btn-link btn-viewWorks"
+                  >View Work <span><i class="fas fa-arrow-right"></i></span
+                ></a>
+              </div>
+            </div>
+          </div>
+          <div class="work-1">
+            <img src="./img/w1.jpg" class="work-1-img" alt="work 1" />
+            <div class="work-1-info">
+              <div class="work-1-info-mod">
+                <h3 class="heading-work-1">eCommerce</h3>
+                <a href="#" class="btn btn-link btn-viewWorks"
+                  >View Work <span><i class="fas fa-arrow-right"></i></span
+                ></a>
+              </div>
+            </div>
+          </div>
+          <div class="work-1">
+            <img src="./img/w1.jpg" class="work-1-img" alt="work 1" />
+            <div class="work-1-info">
+              <div class="work-1-info-mod">
+                <h3 class="heading-work-1">eCommerce</h3>
+                <a href="#" class="btn btn-link btn-viewWorks"
+                  >View Work <span><i class="fas fa-arrow-right"></i></span
+                ></a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
