completed the portfolio website

--- a/index.html
+++ b/index.html
@@ -389,11 +389,152 @@
             </div>
           </div>
         </div>
+
+        <div class="btn-all-works">
+          <a href="#" class="btn btn-view-all-works">View Works</a>
+        </div>
       </div>
     </section>
     <!-- 
 =====================================================
     Portfolio area ends here
+===================================================== -->
+    <!-- 
+=====================================================
+    Contact area starts here
+===================================================== -->
+
+    <section class="section-contact">
+      <div class="container">
+        <div class="contact">
+          <div class="contact-left">
+            <img src="img/contact.png" alt="" class="contact-left-img" />
+          </div>
+          <div class="contact-right">
+            <div class="contact-right-header">
+              <h3 class="heading-contact">Contact</h3>
+            </div>
+            <div class="contact-right-info">
+              <div class="contact-right-info-email">
+                <h5 class="heading-contact-right-email">Email</h5>
+                <p class="contact-right-info-email-address">
+                  nayeem.muzahid@northsouth.edu
+                </p>
+              </div>
+              <div class="contact-right-info-email">
+                <h5 class="heading-contact-right-email">Phone</h5>
+                <p class="contact-right-info-email-address">01949509823</p>
+              </div>
+            </div>
+
+            <div class="contact-form">
+              <form action="#" class="contact-form-mod">
+                <input
+                  type="text"
+                  class="contact-form-name"
+                  placeholder="Name"
+                />
+                <input
+                  type="text"
+                  class="contact-form-phone"
+                  placeholder="Phone"
+                />
+                <input
+                  type="text"
+                  class="contact-form-email"
+                  placeholder="Email"
+                />
+
+                <input
+                  type="submit"
+                  class="btn btn-contact-submit"
+                  value="Send Message"
+                />
+              </form>
+
+              <div class="social-media">
+                <h5 class="heading-contact-right-email">Social Media</h5>
+                <span class="social-media-handle social-media-facebook"
+                  ><a href="#" class="social-media-handle-link"
+                    ><i class="fab fa-facebook-square"></i></a></span
+                ><span class="social-media-handle social-media-github"
+                  ><a href="#" class="social-media-handle-link"
+                    ><i class="fab fa-github-square"></i></a></span
+                ><span class="social-media-handle social-media-linkedin"
+                  ><a href="#" class="social-media-handle-link">
+                    <i class="fab fa-linkedin"></i></a
+                ></span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- 
+=====================================================
+    Contact area ends here
+===================================================== -->
+    <!-- 
+=====================================================
+    Footer area starts here
+===================================================== -->
+    <footer class="footer-area">
+      <div class="container">
+        <div class="footer">
+          <div class="footer-left">
+            <div class="footer-left-logo">
+              <a href="#home" class="footer-left-logo-text">nayeem.</a>
+            </div>
+            <p class="footer-left-description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Voluptatem hic nobis repudiandae, adipisci tenetur labore impedit
+              vitae eligendi tempore laboriosam eum qui asperiores nihil numquam
+              eveniet, doloremque, alias fugiat iure quae ad aspernatur
+              consectetur! In molestiae omnis soluta sed odio?
+            </p>
+          </div>
+          <div class="footer-middle">
+            <h4 class="heading-footer">Services</h4>
+
+            <ul class="service-list">
+              <li class="service-item">
+                <a href="#" class="service-link">Web Design</a>
+              </li>
+              <li class="service-item">
+                <a href="#" class="service-link">Web Design</a>
+              </li>
+              <li class="service-item">
+                <a href="#" class="service-link">Web Design</a>
+              </li>
+              <li class="service-item">
+                <a href="#" class="service-link">Web Design</a>
+              </li>
+              <li class="service-item">
+                <a href="#" class="service-link">Web Design</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer-right">
+            <h4 class="heading-footer">Have a question?</h4>
+
+            <div class="footer-right-phone">
+              <span class="footer-right-phone-icon"
+                ><i class="fas fa-phone-square-alt"></i> 01949509823</span
+              >
+            </div>
+            <div class="footer-right-phone">
+              <span class="footer-right-phone-icon"
+                ><i class="fas fa-envelope"></i>
+                nayeem.muzahid@northsouth.edu</span
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- 
+=====================================================
+    Footer area ends here
 ===================================================== -->
 
     <!-- BOOTSTRAP JS CDN  -->
