--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
               </div>
             </div>
             <div class="skill__info btn-about-info">
-              <div class="aboutme">
+              <div class="aboutme aboutme-skills">
                 <h1 class="heading__aboutme">Skills:</h1>
 
                 <div class="skills">
@@ -186,7 +186,7 @@
               </div>
             </div>
             <div class="experience__info btn-about-info">
-              <div class="aboutme">
+              <div class="aboutme aboutme-experience">
                 <h1 class="heading__aboutme">Experience:</h1>
 
                 <div class="experience marginTop4">
