working on the portfolio section

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             ></a>
           </div>
           <div class="hero-img">
-            <img src="./img/hero-1.png" alt="hero image" class="img img-hero" />
+            <img src="./img/hero-3.png" alt="hero image" class="img img-hero" />
           </div>
         </div>
 
@@ -408,7 +408,7 @@
       <div class="container">
         <div class="contact">
           <div class="contact-left">
-            <img src="img/contact.png" alt="" class="contact-left-img" />
+            <img src="img/contact-2.png" alt="" class="contact-left-img" />
           </div>
           <div class="contact-right">
             <div class="contact-right-header">
